--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Bebas+Neue&display=swap");
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -204,6 +207,7 @@ html {
   width: 10px;
 }
 
+
 ::-webkit-scrollbar-track {
   @apply bg-transparent;
 }
@@ -243,4 +247,30 @@ canvas {
   width: 100% !important;
   height: 100% !important;
   touch-action: none; /* Prevent canvas scrolling on mobile */
+}
+.navbar-glow::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 1rem;
+  pointer-events: none;
+  z-index: -1;
+
+  box-shadow:
+    inset 0 0 20px rgba(255, 255, 255, 0.08),
+    inset 0 0 40px rgba(255, 255, 255, 0.05),
+    inset 0 0 60px rgba(255, 255, 255, 0.03);
+}
+.navbar-glow::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 1rem;
+  pointer-events: none;
+  z-index: -1;
+  box-shadow:
+    inset 0 0 8px rgba(255, 255, 255, 0.05),
+    inset 0 0 18px rgba(255, 255, 255, 0.04),
+    inset 0 0 30px rgba(255, 255, 255, 0.03);
+  transition: opacity 0.4s ease;
 }
