--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -417,19 +417,31 @@ canvas {
 }
 
 @keyframes glitch {
-  0% { clip-path: inset(0 0 5% 0); }
-  10% { clip-path: inset(10% 0 55% 0); }
-  20% { clip-path: inset(20% 0 40% 0); }
-  30% { clip-path: inset(10% 0 20% 0); }
-  40% { clip-path: inset(0 0 15% 0); }
-  50% { clip-path: inset(5% 0 25% 0); }
-  60% { clip-path: inset(15% 0 30% 0); }
-  70% { clip-path: inset(10% 0 10% 0); }
-  80% { clip-path: inset(5% 0 20% 0); }
-  90% { clip-path: inset(15% 0 40% 0); }
-  100% { clip-path: inset(0 0 5% 0); }
+  0% {
+    clip-path: inset(10% 0 90% 0);
+  }
+  20% {
+    clip-path: inset(80% 0 5% 0);
+  }
+  40% {
+    clip-path: inset(30% 0 60% 0);
+  }
+  60% {
+    clip-path: inset(45% 0 40% 0);
+  }
+  80% {
+    clip-path: inset(5% 0 85% 0);
+  }
+  100% {
+    clip-path: inset(75% 0 10% 0);
+  }
 }
 
-.animate-\[glitch_1s_infinite\] {
-  animation: glitch 1s infinite;
+.animate-glitch {
+  animation: glitch 1s infinite linear alternate;
+}
+
+.animate-glitch-delay {
+  animation: glitch 1s infinite linear alternate-reverse;
+  animation-delay: 0.5s;
 }
